// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAddress should render disabled 1`] = `
<div>
  <div>
    <button
      class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress is-disabled "
      data-testid="SelectAddress__wrapper"
      disabled=""
      type="button"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG mr-3 ml-4 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="inline-flex items-center no-ligatures"
      />
      <div
        class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </button>
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
      data-testid="SelectAddress__input"
      readonly=""
      value=""
    />
  </div>
</div>
`;

exports[`SelectAddress should render empty 1`] = `
<div>
  <div>
    <button
      class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
      data-testid="SelectAddress__wrapper"
      type="button"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG mr-3 ml-4 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="inline-flex items-center no-ligatures"
      />
      <div
        class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </button>
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
      data-testid="SelectAddress__input"
      readonly=""
      value=""
    />
  </div>
</div>
`;

exports[`SelectAddress should render invalid 1`] = `
<div>
  <div>
    <button
      class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  is-invalid"
      data-testid="SelectAddress__wrapper"
      type="button"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG mr-3 ml-4 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="inline-flex items-center no-ligatures"
      />
      <div
        class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </button>
    <input
      aria-invalid="true"
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
      data-testid="SelectAddress__input"
      readonly=""
      value=""
    />
    <div
      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
    >
      <span
        data-testid="Input-error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectAddress should render with preselected address 1`] = `
<div>
  <div>
    <button
      class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
      data-testid="SelectAddress__wrapper"
      type="button"
    >
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-4"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full"
        >
          <img
            alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
            title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
          />
        </div>
      </div>
      <div
        class="inline-flex items-center no-ligatures"
      >
        <span
          class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
          data-testid="address__wallet-address"
        >
          bP6T9GQ3kqP6T…TTTP6T9GQ3kqT
        </span>
      </div>
      <div
        class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </button>
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
      data-testid="SelectAddress__input"
      readonly=""
      value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
    />
  </div>
</div>
`;

exports[`SelectAddress should render with preselected verified address 1`] = `
<div>
  <div>
    <button
      class="SelectAddressstyles__SelectAddressWrapper-vvcyzs-0 ksbSWA SelectAddress  "
      data-testid="SelectAddress__wrapper"
      type="button"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG mr-3 ml-4 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="inline-flex items-center no-ligatures"
      />
      <div
        class="flex absolute right-4 items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class="rounded-full text-theme-success-400 bg-theme-success-100"
        >
          <div
            class="sc-bdfBwQ iNulIV"
            height="18"
            width="18"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </button>
    <input
      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures hidden"
      data-testid="SelectAddress__input"
      readonly=""
      value=""
    />
  </div>
</div>
`;
